[HIMIN-130] refactor: collect(Collectors.toList()) → toList() 로 변경