@@ -1,7 +1,6 @@
 package com.prgrms.himin.shop.application;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -56,7 +55,7 @@ public class ShopService {
 
 		return shops.stream()
 			.map(ShopResponse::from)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Transactional
